# mko_get_mediascope_data

./: .gitignore  MANIFEST.in  README.md  construct.py  cross_tab.py  default_report_settings.yaml  get_dictionary.py  main.py  programs.py  pyproject.toml  report_settings.yaml  requirements.txt  top_advertisers.py
core/: construct.py  reports.py  tasks.py  utils.py
data_getter/: construct.py  utils.py
mko_get_mediascope_data/: get_data.py
mko_get_mediascope_data/core/: config_service.py  errors.py  init_service.py  logger.py  path_service.py  reports.py  tasks.py  utils.py
mko_get_mediascope_data/settings/: app_config.yaml  log_config.yaml
mko_get_mediascope_data/settings/connections/: mediascope_RENAME_.json
mko_get_mediascope_data/settings/defaults/: navigation.yaml
mko_get_mediascope_data/settings/defaults/media/tv/: nat_tv_cross_tab.yaml  reg_tv_crosstab.yaml  tv_crosstab.yaml  tv_dict_crosstab.yaml
mko_get_mediascope_data/settings/defaults/tv/: tv_crosstab.yaml
mko_get_mediascope_data/settings/reports/: nat_tv_brands_last.yaml  test.yaml  tv_report.yaml
mko_get_mediascope_data/settings/reports/gap_resurs/: nat_tv_brands.yaml
mko_get_mediascope_data/settings/reports/last_category/: nat_tv_brands_last.yaml  nat_tv_brands_snack.yaml  nat_tv_brands_weekly_reach.yaml
mko_get_mediascope_data/settings/reports/others/: reg_tv_by_spots.yaml
mko_get_mediascope_data/settings/reports/sovcombank/: nat_tv_brands_finance.yaml  nat_tv_by_spots.yaml  nat_tv_new_creatives.yaml  nat_tv_tvreport.yaml  reg_tv_by_spots.yaml  tv_msk_new_creatives.yaml
mko_get_mediascope_data/settings/reports/unused/: nat_tv_new_creatives.yaml  tv_report_time_band_no_them_OLD.yaml
settings/: default_report_settings.yaml  report_settings.yaml  report_settings_cars.yaml
settings/defaults/: navigation.yaml
settings/defaults/media/tv/: nat_tv_cross_tab.yaml  nat_tv_settings.yaml  nat_tv_time_band.yaml
settings/reports/: nat_tv_brands_bank_ext.yaml  nat_tv_brands_bank_test.yaml  nat_tv_brands_cars.yaml  nat_tv_brands_confectionary.yaml  nat_tv_brands_household_appliances.yaml  nat_tv_brands_snacks2.yaml  nat_tv_channels_atv_m.yaml  nat_tv_channels_atv_w.yaml  nat_tv_channels_ba_m.yaml  nat_tv_channels_tvr_w.yaml  report_settings_cars.yaml  test.yaml  tv_report.yaml
settings/reports/unused/: nat_tv_brands_bank_ext.yaml  nat_tv_by_spot_report_settings.yaml  nat_tv_top_adv.yaml  nat_tv_top_prg.yaml
src/mko_get_mediascope_data/: app.py  get_data.py  test.py
src/mko_get_mediascope_data/core/: errors.py  init_service.py  models.py  network.py  network_handler.py  paths.py  reports.py  services.py  tasks.py  utils.py
src/mko_get_mediascope_data/settings/: log_config.yaml
src/mko_get_mediascope_data/settings/defaults/tv/: crosstab.yaml
src/mko_get_mediascope_data/settings/defaults/tv_reg/: crosstab.yaml
src/mko_get_mediascope_data/settings/reports/: nat_tv_brands_last.yaml  nat_tv_brands_tefal.yaml  nat_tv_tvreport.yaml
src/mko_get_mediascope_data/settings/reports/gap_resurs/: reg_tv_by_spots.yaml
src/mko_get_mediascope_data/settings/reports/last_category/: nat_tv_brands_snack.yaml
src/mko_get_mediascope_data/settings/reports/sovcombank/: nat_tv_brands_finance2.yaml  nat_tv_finance_q.yaml  tv_msk_new_creatives.yaml  tv_msk_new_creatives_short.yaml
src/mko_get_mediascope_data/settings/reports/unused/: nat_tv_by_spot.yaml
tests/: conftest.py  test_app.py  test_models.py  test_network.py  test_reports.py  test_services.py  test_utils.py
