[project]
name = "mko_get_mediascope_data"
version = "1.0.0"
authors = [
  { name="mko", email="manicko@yandex.ru" },
]
description = "Tool to load data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/manicko/mko_get_mediascope_data"
Issues = "https://github.com/manicko/mko_get_mediascope_data"