[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "mko_get_mediascope_data"
version = "1.0.7"
authors = [
    { name = "mko", email = "manicko@yandex.ru" },
]

description = "Tool to load data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.2.1",
    "mediascope-api-lib>=1.1.15",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.0",
    "PyYAML>=6.0.1",
    "requests>=2.30.0",
    "Unidecode>=1.3.8",
    "urllib3>=2.1.0"
]

classifiers = [
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/manicko/mko_get_mediascope_data"
Issues = "https://github.com/manicko/mko_get_mediascope_data"


[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux", "Windows"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mko_get_mediascope_data", "mko_get_mediascope_data.*"]
namespaces = false